Tree/Grammatic.txt
// Tree    ::= AddSub '$'
// AddSub  ::= MulDiv { ['+' '-'] MulDiv } *
// MulDiv  ::= Pow { ['*' '/'] Pow } *
// Pow     ::= Func { '^' Func } *
// Func    ::= Minus | Bracket | { Ln | Sin | .. | Arccos }

// Minus   ::= '-' MulDiv

// Ln      :: 'ln'  '(' AddSub ')'
// Sin     :: 'sin' '(' AddSub ')'
// Cos     :: 'cos' '(' AddSub ')'
// ...
// Arccos  ::= 'arccos' '(' MulDiv ')'

// Bracket ::= '(' Func ')' | Var | Number
// Var     ::= 'x'
// Number ::= ['0' - '9']+
